{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 28,
  "lineage": "daa2059e-bb9a-103d-ee68-0c91b1f1de54",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:761323155761:loadbalancer/app/tf-lb-20220719183524540500000004/66c390908bf0fa61",
            "arn_suffix": "app/tf-lb-20220719183524540500000004/66c390908bf0fa61",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20220719183524540500000004-1539499507.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:761323155761:loadbalancer/app/tf-lb-20220719183524540500000004/66c390908bf0fa61",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20220719183524540500000004",
            "security_groups": [
              "sg-08af24001e557091a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0185c506a6eb92989"
              },
              {
                "subnet_id": "subnet-07927bc1cb5e3f3f9"
              }
            ],
            "subnets": [
              "subnet-0185c506a6eb92989",
              "subnet-07927bc1cb5e3f3f9"
            ],
            "vpc_id": "vpc-091d49f41e46a788a",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:761323155761:loadbalancer/app/tf-lb-20220719183524562500000005/a1970b10c48b361e",
            "arn_suffix": "app/tf-lb-20220719183524562500000005/a1970b10c48b361e",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20220719183524562500000005-2059194165.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:761323155761:loadbalancer/app/tf-lb-20220719183524562500000005/a1970b10c48b361e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20220719183524562500000005",
            "security_groups": [
              "sg-08af24001e557091a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0185c506a6eb92989"
              },
              {
                "subnet_id": "subnet-07927bc1cb5e3f3f9"
              }
            ],
            "subnets": [
              "subnet-0185c506a6eb92989",
              "subnet-07927bc1cb5e3f3f9"
            ],
            "vpc_id": "vpc-091d49f41e46a788a",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "listener_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:761323155761:listener/app/tf-lb-20220719183524562500000005/a1970b10c48b361e/0d23865d1c33b522",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:761323155761:targetgroup/tf-20220719183522214500000003/40e7d5504abbf16c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:761323155761:listener/app/tf-lb-20220719183524562500000005/a1970b10c48b361e/0d23865d1c33b522",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:761323155761:loadbalancer/app/tf-lb-20220719183524562500000005/a1970b10c48b361e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.alb",
            "aws_alb_target_group.group",
            "aws_security_group.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:761323155761:targetgroup/tf-20220719183522214500000003/40e7d5504abbf16c",
            "arn_suffix": "targetgroup/tf-20220719183522214500000003/40e7d5504abbf16c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/login",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:761323155761:targetgroup/tf-20220719183522214500000003/40e7d5504abbf16c",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-20220719183522214500000003",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-091d49f41e46a788a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01af86315bb844838",
            "domain": "vpc",
            "id": "eipalloc-01af86315bb844838",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-35-169-105-68.compute-1.amazonaws.com",
            "public_ip": "35.169.105.68",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06189fd904b2faec8",
            "domain": "vpc",
            "id": "eipalloc-06189fd904b2faec8",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-211-9-240.compute-1.amazonaws.com",
            "public_ip": "54.211.9.240",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:761323155761:internet-gateway/igw-0e80fc75bc29f2808",
            "id": "igw-0e80fc75bc29f2808",
            "owner_id": "761323155761",
            "vpc_id": "vpc-091d49f41e46a788a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01af86315bb844838",
            "connectivity_type": "public",
            "id": "nat-02a743aefdf01e39e",
            "network_interface_id": "eni-0812f08a82b2b7e9d",
            "private_ip": "10.0.10.5",
            "public_ip": "35.169.105.68",
            "subnet_id": "subnet-07927bc1cb5e3f3f9"
          },
          "dependencies": [
            "aws_eip.nateIP",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06189fd904b2faec8",
            "connectivity_type": "public",
            "id": "nat-0d3e54242c634d744",
            "network_interface_id": "eni-05f5bb5631d14a7a3",
            "private_ip": "10.0.20.92",
            "public_ip": "54.211.9.240",
            "subnet_id": "subnet-0185c506a6eb92989"
          },
          "dependencies": [
            "aws_eip.nateIP",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privatert",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:761323155761:route-table/rtb-0ed567cb5691949c6",
            "id": "rtb-0ed567cb5691949c6",
            "owner_id": "761323155761",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e80fc75bc29f2808",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-091d49f41e46a788a"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:761323155761:route-table/rtb-07d60e0866e7db195",
            "id": "rtb-07d60e0866e7db195",
            "owner_id": "761323155761",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e80fc75bc29f2808",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-091d49f41e46a788a"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privaterta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0220dc30b9960770e",
            "route_table_id": "rtb-0ed567cb5691949c6",
            "subnet_id": "subnet-0b0f9228120e13231"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.privatert",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b51c2770e8e43cc",
            "route_table_id": "rtb-0ed567cb5691949c6",
            "subnet_id": "subnet-0d11c02b2b65e845c"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.privatert",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicrta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048583e191c4da219",
            "route_table_id": "rtb-07d60e0866e7db195",
            "subnet_id": "subnet-07927bc1cb5e3f3f9"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.publicrt",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e21cdf6648949290",
            "route_table_id": "rtb-07d60e0866e7db195",
            "subnet_id": "subnet-0185c506a6eb92989"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.publicrt",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:761323155761:security-group/sg-0089620fa91751827",
            "description": "Private internet access",
            "egress": [],
            "id": "sg-0089620fa91751827",
            "ingress": [],
            "name": "terraform-20220719183522202000000001",
            "name_prefix": "terraform-",
            "owner_id": "761323155761",
            "revoke_rules_on_delete": false,
            "tags": {
              "Role": "private"
            },
            "tags_all": {
              "Role": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-091d49f41e46a788a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:761323155761:security-group/sg-08af24001e557091a",
            "description": "Public internet access",
            "egress": [],
            "id": "sg-08af24001e557091a",
            "ingress": [],
            "name": "terraform-20220719183522208700000002",
            "name_prefix": "terraform-",
            "owner_id": "761323155761",
            "revoke_rules_on_delete": false,
            "tags": {
              "Role": "public"
            },
            "tags_all": {
              "Role": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-091d49f41e46a788a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-279211149",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0089620fa91751827",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_in_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2823327259",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08af24001e557091a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_in_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-85307143",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08af24001e557091a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_in_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-516084654",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08af24001e557091a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2523567577",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-08af24001e557091a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:761323155761:subnet/subnet-0b0f9228120e13231",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0f9228120e13231",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "761323155761",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-091d49f41e46a788a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:761323155761:subnet/subnet-0d11c02b2b65e845c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.40.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d11c02b2b65e845c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "761323155761",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-091d49f41e46a788a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:761323155761:subnet/subnet-07927bc1cb5e3f3f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07927bc1cb5e3f3f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "761323155761",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-091d49f41e46a788a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:761323155761:subnet/subnet-0185c506a6eb92989",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0185c506a6eb92989",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "761323155761",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-091d49f41e46a788a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:761323155761:vpc/vpc-091d49f41e46a788a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-071acc2a31ccd46b1",
            "default_route_table_id": "rtb-0a80edcfb03dbfc17",
            "default_security_group_id": "sg-0964040498a7e8476",
            "dhcp_options_id": "dopt-0bfb1b397afe8c8b3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-091d49f41e46a788a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a80edcfb03dbfc17",
            "owner_id": "761323155761"
          }
        }
      ]
    }
  ]
}